# mlx-server

./: .gitignore  .release-please-manifest.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  lefthook.yml  omen.toml  release-please-config.json
.github/workflows/: build.yml  ci.yml  release.yml
bench/: bench.py  bench_audio.py  bench_parity.py  parity_results.json  parity_results.md  results.json  results.md
crates/higgs/: CHANGELOG.md  Cargo.toml  build.rs
crates/higgs-engine/: CHANGELOG.md  Cargo.toml
crates/higgs-engine/src/: batch_engine.rs  engine.rs  error.rs  lib.rs  model_loader.rs  prompt_cache.rs  reasoning_parser.rs  simple.rs  tool_parser.rs
crates/higgs-models/: CHANGELOG.md  Cargo.toml
crates/higgs-models/src/: error.rs  gemma2.rs  llava_qwen2.rs  phi3.rs  qwen3_moe.rs  qwen3_next.rs  registry.rs  siglip.rs  starcoder2.rs
crates/higgs/src/: anthropic_adapter.rs  auto_router.rs  config.rs  daemon.rs  error.rs  lib.rs  main.rs  metrics.rs  router.rs  state.rs  translate.rs
crates/higgs/src/routes/: anthropic.rs  chat.rs  completions.rs  embeddings.rs  mod.rs
crates/higgs/src/tui/: mod.rs
crates/higgs/src/tui/views/: errors.rs  mod.rs  models.rs  overview.rs  providers.rs  routing.rs
crates/higgs/src/types/: anthropic.rs  openai.rs
crates/higgs/tests/integration/: cli_exec.rs  cli_run.rs  error_contract.rs  mod.rs  proxy_e2e.rs  request_validation.rs  response_contract.rs  router.rs
crates/mlx-engine/: CHANGELOG.md  Cargo.toml
crates/mlx-engine/src/: batch_engine.rs  chat_template.rs  constrained.rs  engine.rs  error.rs  lib.rs  model_loader.rs  prompt_cache.rs  simple.rs  tool_parser.rs
crates/mlx-models/: CHANGELOG.md  Cargo.toml
crates/mlx-models/src/: cache.rs  deepseek_v2.rs  error.rs  lib.rs  qwen3_moe.rs  qwen3_next.rs  registry.rs  transformer.rs  utils.rs
crates/mlx-server/: CHANGELOG.md  Cargo.toml
crates/mlx-server/src/: anthropic_adapter.rs  config.rs  error.rs  lib.rs  main.rs  model_download.rs  model_resolver.rs  state.rs
crates/mlx-server/src/routes/: anthropic.rs  chat.rs  completions.rs  embeddings.rs  health.rs  models.rs
crates/mlx-server/src/types/: anthropic.rs  openai.rs
crates/mlx-server/tests/integration/: error_contract.rs  request_validation.rs  response_contract.rs  router.rs
docs/: mlx_rs_capabilities.md  qwen3_next_architecture.md
