[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85.0"
repository = "https://github.com/panbanda/mlx-server"
homepage = "https://github.com/panbanda/mlx-server"

[workspace.lints.rust]
unsafe_code = "deny"
non_ascii_idents = "forbid"

[workspace.lints.clippy]
# Lint groups
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# MSRV compat: these suggest features stabilized after 1.85.0
collapsible_if = "allow"
manual_is_multiple_of = "allow"

# Pedantic overrides -- too noisy or conflicts with project conventions
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
many_single_char_names = "allow"
struct_field_names = "allow"

# Restriction lints (opt-in)
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
indexing_slicing = "deny"
as_conversions = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
shadow_reuse = "deny"
shadow_same = "deny"
shadow_unrelated = "deny"
clone_on_ref_ptr = "deny"
empty_structs_with_brackets = "deny"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
format_push_string = "deny"
if_then_some_else_none = "deny"
impl_trait_in_params = "deny"
infinite_loop = "deny"
lossy_float_literal = "deny"
mem_forget = "deny"
mixed_read_write_in_expression = "deny"
mutex_atomic = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_type_annotations = "deny"
rest_pat_in_fully_bound_structs = "deny"
self_named_module_files = "deny"
str_to_string = "deny"
string_add = "deny"
tests_outside_test_module = "deny"
try_err = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
verbose_file_reads = "deny"
wildcard_enum_match_arm = "deny"

[workspace.dependencies]
# Local crates
mlx-engine = { path = "crates/mlx-engine" }
mlx-models = { path = "crates/mlx-models" }

# MLX
mlx-rs = "0.25.3"
mlx-sys = "=0.2.0"

# HTTP
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "request-id", "auth"] }
governor = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tokenization + Templates
tokenizers = { version = "0.22", features = ["http"] }
minijinja = { version = "2", features = ["loader"] }
minijinja-contrib = { version = "2", features = ["pycompat"] }

# CLI + Configuration
clap = { version = "4", features = ["derive"] }
figment = { version = "0.10", features = ["env"] }
directories = "6"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"

# Async streaming
async-stream = "0.3"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[patch.crates-io]
mlx-rs = { git = "https://github.com/panbanda/mlx-rs.git", rev = "801b114e" }
mlx-sys = { git = "https://github.com/panbanda/mlx-rs.git", rev = "801b114e" }

[profile.release]
lto = "thin"
codegen-units = 1
