[package]
name = "higgs-engine"
version = "0.1.12"
description = "Inference engine (tokenization, generation loop, prompt caching) for higgs"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
higgs-models.workspace = true
mlx-rs.workspace = true
mlx-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
tokenizers.workspace = true
minijinja.workspace = true
minijinja-contrib.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { version = "1", features = ["sync"] }
outlines-core = { version = "0.2.14", default-features = false }

[dev-dependencies]
tempfile = "3"
