[package]
name = "higgs"
version = "0.1.15"
description = "OpenAI and Anthropic-compatible inference server for Apple Silicon, built on mlx-rs"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
higgs-engine.workspace = true
higgs-models.workspace = true
mlx-rs.workspace = true
axum.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
governor.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
figment.workspace = true
directories.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
async-stream.workspace = true
base64.workspace = true
reqwest.workspace = true
regex.workspace = true
bytes.workspace = true
http.workspace = true
futures.workspace = true
toml_edit.workspace = true
nix.workspace = true
ratatui.workspace = true
crossterm.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tokio = { version = "1", features = ["macros", "rt"] }
tower = { version = "0.5", features = ["util"] }
hyper = "1"
tempfile = "3.25.0"
wiremock = "0.6"
