[package]
name = "mlx-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mlx-models.workspace = true
mlx-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokenizers.workspace = true
minijinja.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
