[package]
name = "mlx-engine"
version = "0.1.5"
description = "Inference engine (tokenization, generation loop, prompt caching) for mlx-server"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
mlx-models.workspace = true
mlx-rs.workspace = true
mlx-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
tokenizers.workspace = true
minijinja.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
