[package]
name = "mlx-models"
version = "0.1.1"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mlx-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokenizers.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
