[package]
name = "mlx-models"
version = "0.1.2"
description = "Model architectures and weight loading for mlx-server (LLaMA, Mistral, Qwen2/3)"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
mlx-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokenizers.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
