[package]
name = "mlx-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mlx-engine.workspace = true
mlx-models.workspace = true
axum.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
governor.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
async-stream.workspace = true

[dev-dependencies]
